<resources>
    <string name="app_name">SmartTrip Companion</string>
    <string name="login_title">Welcome back</string>
    <string name="register_title">Create your account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_action">Log in</string>
    <string name="register_action">Register</string>
    <string name="switch_to_register">Need an account? Register</string>
    <string name="switch_to_login">Already registered? Log in</string>
    <string name="map_title">Explore nearby places</string>
    <string name="favorites_title">Saved places</string>
    <string name="share_location">Share location</string>
    <string name="save_place">Save place</string>
    <string name="recenter_map">Recenter</string>
    <string name="logout">Log out</string>
    <string name="weather_placeholder">Weather will appear here</string>
    <string name="device_motion_idle">Hold steady for the best map experience.</string>
    <string name="device_motion_active">Movement detected. Tap recenter for an updated view.</string>
    <string name="favorites_empty">No favorite places saved yet.</string>
    <string name="selected_location">Selected location</string>
    <string name="current_location">Current location</string>
    <string name="delete_place">Delete place</string>
    <string name="loading">Loading...</string>
    <string name="map_api_missing">Add a Google Maps API key to local.properties as MAPS_API_KEY.</string>
    <string name="weather_api_missing">Add an OpenWeather API key to local.properties as OPEN_WEATHER_API_KEY.</string>
</resources>